objects/Fridge_Reading__e.object
<CustomObject><fields>
        <fullName>DeviceId__c</fullName>
        <label>DeviceId</label>
        <length>16</length>
        <required>true</required>
        <type>Text</type>
    </fields><fields>
        <fullName>Door__c</fullName>
        <label>Door</label>
        <length>10</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Humidity__c</fullName>
        <label>Humidity</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Temperature__c</fullName>
        <label>Temperature</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>ts__c</fullName>
        <label>ts</label>
        <type>DateTime</type>
    </fields><deploymentStatus>Deployed</deploymentStatus><label>Fridge Reading</label><pluralLabel>Fridge Readings</pluralLabel></CustomObject>